// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Withdraw /> should render correctly 1`] = `
<DocumentFragment>
  <form
    class="w-100"
  >
    <div
      class="form-group row"
    >
      <label
        class="form-label col-form-label col-md-2 offset-md-2"
        for="withdraw-value"
      >
        Amount
      </label>
      <div
        class="col-md-4"
      >
        <input
          class="form-control form-control-bg"
          id="withdraw-value"
          name="withdrawValue"
          type="text"
          value="0"
        />
        <div
          class="invalid-feedback"
          style="display: none;"
        />
      </div>
      <div
        class="col-md-2"
      >
        <button
          class="btn btn-link btn-sm"
          type="button"
        >
          Set max
        </button>
      </div>
    </div>
    <div
      class="d-flex justify-content-center"
    >
      <button
        class="btn btn-primary"
        type="submit"
      >
        Withdraw
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`<Withdraw /> should validate input from user correctly 1`] = `
<DocumentFragment>
  <form
    class="w-100"
  >
    <div
      class="form-group row"
    >
      <label
        class="form-label col-form-label col-md-2 offset-md-2"
        for="withdraw-value"
      >
        Amount
      </label>
      <div
        class="col-md-4"
      >
        <input
          class="form-control form-control-bg"
          id="withdraw-value"
          name="withdrawValue"
          type="text"
          value=""
        />
        <div
          class="invalid-feedback"
          style="display: inline;"
        >
          Field is required.
        </div>
      </div>
      <div
        class="col-md-2"
      >
        <button
          class="btn btn-link btn-sm"
          type="button"
        >
          Set max
        </button>
      </div>
    </div>
    <div
      class="d-flex justify-content-center"
    >
      <button
        class="btn btn-primary"
        disabled=""
        type="submit"
      >
        Withdraw
      </button>
    </div>
  </form>
</DocumentFragment>
`;
